# clouds

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ext/ImGui/: imgui.cpp  imgui.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
ext/tinyfile/: tinyfiledialogs.c
libs/Buffer/: SSBO.cpp  SSBO.h
libs/Camera/: Camera.cpp  Camera.h
libs/Includes/: Defs.h
libs/Mesh/: Mesh.cpp  Mesh.h
libs/Noise/: NoiseGenerator.cpp  NoiseGenerator.h
libs/Scene/: Scene.cpp  Scene.h
libs/Shader/: ComputeShader.cpp  ComputeShader.h  FBO.cpp  FBO.h  ScreenFillingQuad.cpp  ScreenFillingQuad.h  Shader.cpp  Shader.h
libs/Texture/: Texture.cpp  Texture.h
res/: mountain.json  sdf.tga
src/exe/clouds/: main.cpp
src/exe/meshToDist/: main.cpp
src/shaders/: Color.frag  Color.vert  Debug.frag  Debug.geom  Debug.vert  clouds.frag  computeFlowMap.comp  computeGradients.comp  computeSigns.comp  generateDistanceField.comp  grid.frag  meijsterX.glsl  meijsterY.glsl  meijsterZ.glsl  parallelPrefixSum3D.vert  passThrough.frag  perlinComp.comp  postProcessing.frag  screen.vert  smoothClouds.frag  smoothSDF.comp  updateCloseDistances.comp  voxelGenBinaryCands.frag  weatherComp.comp  windComp.comp  windDirection.comp  worleyComp.comp
